--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "packages/*"
   ],
   "scripts": {
-    "dev:web": "pnpm --filter web dev",
-    "dev:api": "pnpm --filter api dev",
-    "dev": "concurrently -k -n web,api \"pnpm dev:web\" \"pnpm dev:api\"",
-    "build": "pnpm -r build"
+    "update": "git fetch --all && git reset --hard origin/main && pnpm install --frozen-lockfile",
+    "build:web": "pnpm --filter web build",
+    "build:api": "pnpm --filter api build",
+    "build": "pnpm -r build",
+    "deploy:web": "sudo mkdir -p /var/www/jokr.ebasson.fr && sudo rsync -a --delete apps/web/dist/ /var/www/jokr.ebasson.fr/",
+    "start:api:prod": "pm2 delete jokr-api || true && pm2 start apps/api/dist/index.js --name jokr-api",
+    "deploy:api": "pnpm build:api && pnpm start:api:prod",
+    "updateDeploy:web": "pnpm update && pnpm build:web && pnpm deploy:web",
+    "updateDeploy:api": "pnpm update && pnpm deploy:api",
+    "updateDeploy": "pnpm update && pnpm build && pnpm deploy:web && pnpm start:api:prod",
+    "init:web": "sudo mkdir -p /var/www/jokr.ebasson.fr",
+    "init:pm2": "pm2 save"
   },
   "devDependencies": {
     "concurrently": "^9.0.0"
