--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jokr",
   "private": true,
-  "version": "pre-beta 0.1",
+  "version": "0.1.0-beta.1",
   "description": "Jeux en ligne - JokR",
   "author": "Elina",
   "license": "AGPL-3.0+NonCommercial",
