--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,24 @@
-.idea
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 node_modules
-apps/web/node_modules
-apps/api/node_modules
+dist
+dist-ssr
+*.local
 
-.env
-apps/web/.env
-apps/api/.env
-
-package-lock.json
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
