--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "nodenext",
     "target": "esnext",
+    "moduleResolution": "nodenext",
     "types": [
       "node"
     ],
